--- a/app/src/main/res/xml/pref_group4.xml
+++ b/app/src/main/res/xml/pref_group4.xml
@@ -6,7 +6,7 @@
         android:key="group4Icon"
         android:showDefault="true"
         android:showSilent="true"
-        android:title="Select icon for this Group"/>
+        android:title="@string/pref_groupIcon"/>
 
     <EditTextPreference
         android:defaultValue="Group 4"
