--- a/app/src/main/res/xml/pref_group5.xml
+++ b/app/src/main/res/xml/pref_group5.xml
@@ -13,7 +13,9 @@
         android:key="groupName5"
         android:selectAllOnFocus="true"
         android:singleLine="true"
-        android:title="Group 5 Name: " />
+        android:title="Group 5 Name: "
+        android:inputType="textCapWords"
+        android:capitalize="words" />
 
     <ListPreference
         android:defaultValue="Most Used"
