--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,14 +12,14 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="50dp"
         android:checked="true"
         android:text="@string/enable_missilelauncher"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/setPermissionBtn" />
+        app:layout_constraintTop_toBottomOf="@+id/imgHow" />
 
     <Switch
         android:id="@+id/foregroundNotification"
@@ -66,16 +66,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/foregroundNotification" />
 
-    <Button
-        android:id="@+id/btnAutoSort"
+    <ImageView
+        android:id="@+id/imgHow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="AutoSort \n (beta)"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/config" />
+        app:layout_constraintTop_toBottomOf="@+id/setPermissionBtn"
+        app:srcCompat="@drawable/how_to_draw_over" />
 
 </android.support.constraint.ConstraintLayout>
