settings is main screen now

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#34a796</color>
-    <color name="colorPrimaryDark">#23745b</color>
+    <color name="colorPrimary">#0077ff</color>
+    <color name="colorPrimaryDark">#0055B6</color>
     <color name="colorPrimaryLight">#4cffde</color>
-    <color name="colorAccent">#ffa640</color>
+    <color name="colorAccent">#0077ff</color>
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
     <color name="gray">#818181</color>
