--- a/app/src/main/res/layout/group_picking.xml
+++ b/app/src/main/res/layout/group_picking.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="top">
+    android:layout_gravity="top"
+    android:paddingTop="100dp">
 
     <LinearLayout
         android:layout_width="match_parent"
